--- a/src/static/css/global.sass
+++ b/src/static/css/global.sass
@@ -47,9 +47,6 @@ a, a:visited
     &.disabled:hover
         animation: none
 
-.active:not(.section)
-    animation: base.$animation
-
 .disabled
     cursor: not-allowed !important
     opacity: 0.5
